Fixed layout for gmail new email compose, separated new and reply email type in gmail and added spacing between paragraphs

--- a/web_extensions/copyzilla_email_assistant/content-script/src/features/reply/components/popups/InstructionsPopup.module.css
+++ b/web_extensions/copyzilla_email_assistant/content-script/src/features/reply/components/popups/InstructionsPopup.module.css
@@ -22,7 +22,7 @@
 
 .instructionsPopup textarea {
     width: 200px;
-    height: 100px;
+    height: 60px;
     border: 1px solid var(--grey1);
     border-radius: 8px;
     padding: 10px;
